# 2018-II-YetAnotherProject

./: CMakeLists.txt  EngineConfig.txt  Main.cpp
Engine/: CMakeLists.txt  Types.hpp
Engine/ComponentVisualisers/: CMakeLists.txt
Engine/ComponentVisualisers/Sources/: ComponentVisualiser.hpp  ComponentVisualisersModule.cpp  ComponentVisualisersModule.hpp
Engine/ComponentVisualisers/Sources/Visualisers/: BoxColisionVisualiser.hpp
Engine/Components/: BoxColision.cpp  BoxColision.hpp  CameraComponent.cpp
Engine/Components/Sources/: BaseCollision.cpp  BoxColision.cpp  BoxColision.hpp  CameraComponent.hpp  JontComponent.cpp  SpriteComponent.hpp
Engine/Core/: Actor.cpp  Actor.hpp  ActorComponent.cpp  ActorComponent.hpp  Avatar.cpp  Avatar.hpp  Engine.cpp  Engine.hpp  Facade.hpp  Math.hpp  Object.cpp  Object.hpp  ObjectBase.cpp  ObjectBase.hpp  PlayerController.cpp  PlayerController.hpp  SymulationMode.cpp  SymulationMode.hpp  Visualiser.hpp  World.cpp  World.hpp
Engine/Core/Control/: CameraManager.cpp  CameraManager.hpp  CameraManipulator.cpp  EventCollector.cpp  EventCollector.hpp  EventHandlers.cpp  EventHandlers.hpp
Engine/Core/Sources/: Actor.cpp  Actor.hpp  ActorComponent.cpp  ActorComponent.hpp  ActorModule.cpp  ActorModule.hpp  BaseActorComponent.cpp  BaseActorComponent.hpp  BasePlayerController.hpp  GameMode.cpp  GameMode.hpp  Object.cpp  ObjectBase.hpp  ObjectCreator.hpp  SimulationMode.cpp  SimulationMode.hpp  World.cpp  World.hpp
Engine/Core/Sources/Configs/: CoreConfigs.cpp  EngineConfig.hpp  FrontendConfig.hpp  ResourceConfig.hpp  ResourcesConfig.hpp  SimulationConfig.hpp
Engine/Core/Sources/Control/: ControlTypes.hpp
Engine/Core/Sources/Delegation/: Delegate.hpp
Engine/Core/Sources/Injection/: DependencyInjectionManager.cpp  DependencyInjectionManager.hpp  IFrontendFabric.hpp  IPhysicsFabric.hpp  ISimulationFabric.hpp
Engine/Core/Sources/Interfaces/: ICameraComponent.hpp  ICameraManager.hpp  IConstraint.hpp  IFacade.hpp  IResource.hpp  IRigidBody.hpp  IViewer.hpp  IWorlObject.hpp
Engine/Core/Sources/Modules/: IResource.hpp
Engine/Core/Sources/Threading/: ObjectLocker.hpp  ThreadPool.cpp  ThreadPool.hpp
Engine/Core/Threading/: Initialiser.hpp  Thread.hpp  ThreadContext.cpp  ThreadContext.hpp
Engine/Engine/Sources/: Engine.cpp
Engine/GameFramwork/: CMakeLists.txt
Engine/GameFramwork/Sources/: ActorComponent.cpp  ActorComponent.hpp  Avatar.cpp  Avatar.hpp  PlayerController.cpp  PlayerController.hpp
Engine/GameFramwork/Sources/Camera/: CameraManager.cpp  CameraManager.hpp
Engine/GameFramwork/Sources/Components/: AvatarMovementComponent.cpp  AvatarMovementComponent.hpp  BaseCollision.cpp  BaseCollision.hpp  BoxColision.cpp  CameraComponent.cpp  CameraComponent.hpp  JointComponent.cpp  JointComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
Engine/Misc/Sources/: Common.hpp  Math.cpp  Math.hpp  Types.cpp  Types.hpp
Engine/Misc/Sources/Math/: Vector.cpp  Vector.hpp
Engine/Misc/Sources/Reflection/: Archived.hpp  Archiver.cpp
Engine/Modules/: CMakeLists.txt
Engine/Modules/Box2D/: CMakeLists.txt
Engine/Modules/Box2D/Sources/: B2Constraint.cpp  B2Constraint.hpp  B2Convertion.cpp  B2Fabric.hpp  B2PhysicsScene.cpp  B2RigidBody.cpp  B2RigidBody.hpp
Engine/Modules/OSG/: CMakeLists.txt
Engine/Modules/OSG/Sources/: OSGFabric.hpp  OSGFacade.cpp  OSGFacade.hpp  OSGViewer.cpp  OSGViewer.hpp
Engine/Modules/SFML/: CMakeLists.txt
Engine/Modules/SFML/Sources/: OSGConfig.hpp  RTexture.hpp  SFMLFabric.hpp  SFMLFacade.cpp  SFMLFacade.hpp  (+2 more)
Engine/Resource/: CMakeLists.txt
Engine/Resource/Sources/: ResourceSystem.hpp
Pendulum/: CMakeLists.txt  Main.cpp  Pendulum.hpp  PendulumPlayerController.hpp  PendulumSymulationMode.cpp  PendulumSymulationMode.hpp
Pendulum/Sources/: Pendulum.hpp
(+53 files in other folders)
